# excavation-design

./: .gitignore  CHANGELOG.md  FULL_PACKAGE_CONTENTS.txt  PATCH_README.md  README.md  SHA256SUMS.txt  SHA256_MANIFEST.txt  backup-production.sh  restart-production.sh  start-linux-dev.sh  start-linux.sh  start-macos-dev.sh  start-windows.ps1  status-production.sh  stop-dev.sh  stop-windows.bat  stop-windows.ps1
services/api/: pyproject.toml  reproduce_candidate_issue.py  run_actual_baseline.py  run_actual_final_only.py
services/api/app/: __init__.py  main.py  version.py
services/api/app/calculation/: earth_pressure.py  engine.py  execution_trace.py  geotechnical.py  global_coupled.py  nonlinear_geotechnical.py  numerical_conditioning.py  opensees_benchmark.py  planar_transfer_frame.py  planar_transfer_frame.py.v370  reaction_iteration.py  result_enrichment.py  spatial_frame_6dof.py  stability_detailed.py  support_forces.py  (+6 more)
services/api/pitguard_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/runtime_cache/: README.txt
services/api/scripts/: smoke_industrial_deliverables.py
services/api/tests/: conftest.py  test_mvp.py  test_v2_1_0_tasks_issues.py  test_v2_2_0_trace_and_cad.py  test_v2_3_0_benchmarks_detailing.py  test_v2_4_0_locator_template_rebar.py  test_v2_5_0_completion_closure.py  test_v2_6_0_case_formula_rebar.py  test_v2_8_0_wall_length_closed_loop.py  test_v2_9_0_design_scheme_ledger.py  test_v3_10_0_p0_p2_iteration.py  test_v3_13_0_drawing_delivery.py  test_v3_14_0_strength_driven_recovery.py  test_v3_15_0_general_shape_state_geology.py  test_v3_16_0_non_crossing_supports.py  test_v3_18_0_fengshou_embedment_recovery.py  test_v3_19_0_expert_wall_rebar.py  test_v3_1_0_rebar_cad.py  test_v3_20_0_design_workflow_cage_support.py  test_v3_22_0_p0_p3_industrial_closure.py  test_v3_23_0_joint_clean_ifc_login.py  test_v3_24_0_industrial_calculation_delivery.py  test_v3_27_0_shape_topology_isolated_worker.py  test_v3_28_0_irregular_shape_intelligence.py  test_v3_29_0_resilient_scheme_designer.py  test_v3_2_0_rebar_diagnostics_ux.py  test_v3_30_0_project_open_memory_safety.py  test_v3_31_0_external_dataset_storage.py  test_v3_32_0_fast_interaction_progress.py  test_v3_33_0_idw_stepped_strip_support.py  test_v3_34_0_support_deep_design.py  test_v3_35_0_evidence_gated_reliability.py  test_v3_36_0_general_design_qualification.py  test_v3_37_0_progressive_adaptive_runtime.py  test_v3_38_0_page_overlay_startup_recovery.py  test_v3_39_0_incremental_workspace_performance.py  test_v3_3_0_advanced_engineering.py  test_v3_40_0_core_reintegration.py  test_v3_41_0_engineering_visibility.py  test_v3_43_0_isolated_worker_recovery.py  (+38 more)
(+837 files in other folders)
