[project]
name = "pitguard-api"
version = "2.5.0"
description = "FastAPI backend for PitGuard BIM Designer engineering design-assist prototype"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.0",
  "python-multipart>=0.0.9",
  "numpy>=1.24",
  "shapely>=2.0",
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "matplotlib>=3.8",
  "meshio>=5.3"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["exports*", "tests*"]
