[project]
name = "pitguard-api"
version = "3.87.11"
description = "FastAPI backend for PitGuard intelligent verification-strengthening-recalculation design closure"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128,<0.129",
  "uvicorn[standard]>=0.48,<0.49",
  "pydantic>=2.13,<2.14",
  "python-multipart>=0.0.29,<0.1",
  "numpy>=2.3,<2.4",
  "shapely>=2.1,<2.2",
  "python-docx>=1.2,<1.3",
  "openpyxl>=3.1,<3.2",
  "matplotlib>=3.10,<3.11",
  "meshio>=5.3,<6",
  "ezdxf>=1.4,<1.5",
  "reportlab>=4.4,<4.5"
]

[project.optional-dependencies]
dev = ["pytest>=9,<10", "httpx>=0.28,<0.29", "pypdf>=6,<7"]
benchmark = ["openseespy>=3.8,<3.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["exports*", "tests*"]
